...
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/itemText3"
        app:layout_constraintTop_toBottomOf="@+id/itemText3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="122dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="@+id/itemText2"
        app:layout_constraintTop_toBottomOf="@+id/itemText2" />

    <Button
...
